--- a/index.html
+++ b/index.html
@@ -127,17 +127,17 @@
                     <div class="hidden md:flex space-x-6">
                         <a href="#" onclick="showPage('home')" class="nav-link text-primary-dark hover:text-green-medium transition-colors">Home</a>
                         </a>
-                        <a href="/error.html" class="text-primary-dark hover:text-green-medium transition-colors">About</a>
-                        <a href="/inquire/inquire.html" class="text-primary-dark hover:text-green-medium transition-colors">Message</a>
-                        <a href="/pages/help.html" class="text-primary-dark hover:text-green-medium transition-colors">Help Center</a>
-                        <a href="/pages/ToS.html" class="text-primary-dark hover:text-green-medium transition-colors">Policies</a>
+                        <a href="/error" class="text-primary-dark hover:text-green-medium transition-colors">About</a>
+                        <a href="/inquire/inquire" class="text-primary-dark hover:text-green-medium transition-colors">Message</a>
+                        <a href="/pages/help" class="text-primary-dark hover:text-green-medium transition-colors">Help Center</a>
+                        <a href="/pages/ToS" class="text-primary-dark hover:text-green-medium transition-colors">Policies</a>
 
                         </a>
                     </div>
                 </div>
                 
                 <div class="flex items-center space-x-2 lg:space-x-4">
-                    <button onclick="window.location.href='/pages/login.html'" class="bg-green-medium text-white px-3 py-2 lg:px-4 lg:py-2 rounded font-medium hover:bg-green-dark transition-colors text-sm lg:text-base">LOGIN</button>
+                    <button onclick="window.location.href='/pages/login'" class="bg-green-medium text-white px-3 py-2 lg:px-4 lg:py-2 rounded font-medium hover:bg-green-dark transition-colors text-sm lg:text-base">LOGIN</button>
                 </div>
             </div>
             
@@ -145,9 +145,9 @@
                 <div class="flex flex-col space-y-3">
                     <a href="#" onclick="showPage('home')" class="text-primary-dark hover:text-green-medium transition-colors">Home</a>
                       <a href="/error.html" class="text-primary-dark hover:text-green-medium transition-colors">About</a>
-                        <a href="/inquire/inquire.html" class="text-primary-dark hover:text-green-medium transition-colors">Message</a>
-                        <a href="/pages/help.html" class="text-primary-dark hover:text-green-medium transition-colors">Help Center</a>
-                        <a href="/pages/ToS.html" class="text-primary-dark hover:text-green-medium transition-colors">Policies</a>
+                        <a href="/inquire/inquire" class="text-primary-dark hover:text-green-medium transition-colors">Message</a>
+                        <a href="/pages/help" class="text-primary-dark hover:text-green-medium transition-colors">Help Center</a>
+                        <a href="/pages/ToS" class="text-primary-dark hover:text-green-medium transition-colors">Policies</a>
                 </div>
             </div>
         </nav>
@@ -417,9 +417,9 @@
                         <div class="text-xl font-bold text-primary-dark mr-8">CTU-MC | BS-DEVCOM | ACCESS POINT</div>
                     </div>
                     <div class="flex flex-wrap gap-6 text-sm text-gray-600">
-                        <a href="/pages/ToS.html" class="hover:text-gray-800 transition-colors">Privacy and Terms</a>
-                        <a href="/error.html" class="hover:text-gray-800 transition-colors">About Access Point</a>
-                        <a href="/pages/help.html" class="hover:text-gray-800 transition-colors flex items-center">
+                        <a href="/pages/ToS" class="hover:text-gray-800 transition-colors">Privacy and Terms</a>
+                        <a href="/error" class="hover:text-gray-800 transition-colors">About Access Point</a>
+                        <a href="/pages/help" class="hover:text-gray-800 transition-colors flex items-center">
                             <span class="material-icons text-sm mr-1">help</span>
                             Help
                         </a>
@@ -646,3 +646,4 @@
     </script>
 </body>
 </html>
+
