--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CTU-MC - Access Point</title>
-    <link rel="icon" href="/src/helpdesk.png" type="image/x-icon">
+    <link rel="icon" href="/src/godc.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -646,4 +646,5 @@
     </script>
 </body>
 </html>
+
 
