--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                         <a href="/inquire/inquire" class="text-primary-dark hover:text-green-medium transition-colors">Message</a>
                         <a href="/pages/help" class="text-primary-dark hover:text-green-medium transition-colors">Help Center</a>
                         <a href="/pages/ToS" class="text-primary-dark hover:text-green-medium transition-colors">Policies</a>
+                        <a href="/freedom-wall/login" class="text-primary-dark hover:text-green-medium transition-colors">Wall</a>
 
                         </a>
                     </div>
@@ -646,5 +647,6 @@
     </script>
 </body>
 </html>
+
 
 
