--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <a href="/inquire/inquire" class="text-primary-dark hover:text-green-medium transition-colors">Message</a>
                         <a href="/pages/help" class="text-primary-dark hover:text-green-medium transition-colors">Help Center</a>
                         <a href="/pages/ToS" class="text-primary-dark hover:text-green-medium transition-colors">Policies</a>
-                        <a href="/freedom-wall/login" class="text-primary-dark hover:text-green-medium transition-colors">Wall</a>
+                        <a href="/freedom-wall/login" class="text-primary-dark hover:text-green-medium transition-colors">Commons</a>
 
                         </a>
                     </div>
@@ -149,6 +149,7 @@
                         <a href="/inquire/inquire" class="text-primary-dark hover:text-green-medium transition-colors">Message</a>
                         <a href="/pages/help" class="text-primary-dark hover:text-green-medium transition-colors">Help Center</a>
                         <a href="/pages/ToS" class="text-primary-dark hover:text-green-medium transition-colors">Policies</a>
+                        <a href="/freedom-wall/login" class="text-primary-dark hover:text-green-medium transition-colors">Commons</a>
                 </div>
             </div>
         </nav>
@@ -647,6 +648,7 @@
     </script>
 </body>
 </html>
+
 
 
 
