--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <a href="/error" class="text-primary-dark hover:text-green-medium transition-colors">About</a>
                         <a href="/inquire/inquire" class="text-primary-dark hover:text-green-medium transition-colors">Message</a>
                         <a href="/pages/help" class="text-primary-dark hover:text-green-medium transition-colors">Help Center</a>
-                        <a href="/pages/ToS" class="text-primary-dark hover:text-green-medium transition-colors">Policies</a>
+                        <a href="/pages/faq" class="text-primary-dark hover:text-green-medium transition-colors">FAQs</a>
                         <a href="/freedom-wall/login" class="text-primary-dark hover:text-green-medium transition-colors">Commons</a>
 
                         </a>
@@ -148,7 +148,7 @@
                       <a href="/error.html" class="text-primary-dark hover:text-green-medium transition-colors">About</a>
                         <a href="/inquire/inquire" class="text-primary-dark hover:text-green-medium transition-colors">Message</a>
                         <a href="/pages/help" class="text-primary-dark hover:text-green-medium transition-colors">Help Center</a>
-                        <a href="/pages/ToS" class="text-primary-dark hover:text-green-medium transition-colors">Policies</a>
+                        <a href="/pages/faq" class="text-primary-dark hover:text-green-medium transition-colors">FAQs</a>
                         <a href="/freedom-wall/login" class="text-primary-dark hover:text-green-medium transition-colors">Commons</a>
                 </div>
             </div>
@@ -643,6 +643,7 @@
     </script>
 </body>
 </html>
+
 
 
 
