--- a/pages/faq.html
+++ b/pages/faq.html
@@ -20,14 +20,14 @@
 
         body {
             font-family: 'Google Sans', Arial, sans-serif;
-            background-color: errorffffff;
-            color: error353539;
+            background-color: #ffffff;
+            color: #353539;
             line-height: 1.5;
         }
 
         .header {
-            background: errorffffff;
-            border-bottom: 1px solid error4a7c59;
+            background: #ffffff;
+            border-bottom: 1px solid #4a7c59;
             padding: 16px 24px;
             position: sticky;
             top: 0;
@@ -46,11 +46,11 @@
             align-items: center;
             font-size: 22px;
             font-weight: 500;
-            color: error353539;
+            color: #353539;
         }
 
         .logo-text {
-            color: errorf1ec33;
+            color: #f1ec33;
             margin-right: 8px;
         }
 
@@ -65,7 +65,7 @@
             margin-bottom: 80px;
             padding: 60px 40px;
             border-radius: 16px;
-            color: error353539;
+            color: #353539;
         }
 
         .hero-title {
@@ -102,7 +102,7 @@
         .sidebar-title {
             font-size: 24px;
             font-weight: 500;
-            color: error353539;
+            color: #353539;
             margin-bottom: 32px;
         }
 
@@ -119,7 +119,7 @@
             border: none;
             font-family: inherit;
             font-size: 16px;
-            color: error353539;
+            color: #353539;
             cursor: pointer;
             padding: 12px 16px;
             text-align: left;
@@ -129,13 +129,13 @@
         }
 
         .sidebar-nav button:hover {
-            background-color: error4a7c59;
-            color: errorffffff;
+            background-color: #4a7c59;
+            color: #ffffff;
         }
 
         .sidebar-nav button.active {
             background-color: transparent;
-            color: error5fb14c;
+            color: #5fb14c;
             font-weight: 500;
         }
 
@@ -154,9 +154,9 @@
         .section-title {
             font-size: 32px;
             font-weight: 600;
-            color: error006936;
+            color: #006936;
             margin-bottom: 32px;
-            border-bottom: 3px solid error5fb14c;
+            border-bottom: 3px solid #5fb14c;
             padding-bottom: 16px;
         }
 
@@ -175,40 +175,40 @@
             text-align: left;
             font-family: inherit;
             font-size: 18px;
-            color: error006936;
+            color: #006936;
             font-weight: 500;
             background-color: transparent;
             transition: color 0.2s;
-            border-bottom: 1px solid error4a7c59;
+            border-bottom: 1px solid #4a7c59;
         }
 
         .faq-question:hover {
             background-color: transparent;
-            color: error006936;
+            color: #006936;
         }
 
         .faq-question:focus {
-            outline: 2px solid error5fb14c;
+            outline: 2px solid #5fb14c;
             outline-offset: -2px;
         }
 
         .expand-icon {
-            color: error4a7c59;
+            color: #4a7c59;
             transition: transform 0.3s ease;
             font-size: 24px;
         }
 
         .faq-item.expanded .expand-icon {
             transform: rotate(180deg);
-            color: error5fb14c;
+            color: #5fb14c;
         }
 
         .faq-answer {
             max-height: 0;
             overflow: hidden;
             transition: max-height 0.3s ease, padding 0.3s ease;
-            background-color: errorffffff;
-            border-bottom: 1px solid error4a7c59;
+            background-color: #ffffff;
+            border-bottom: 1px solid #4a7c59;
         }
 
         .faq-answer.show {
@@ -217,18 +217,18 @@
         }
 
         .answer-content {
-            color: error353539;
+            color: #353539;
             font-size: 16px;
             line-height: 1.6;
             margin-top: 8px; /* Added margin to separate answer from question */
         }
 
         .answer-content strong {
-            color: error006936;
+            color: #006936;
         }
 
         .answer-content a {
-            color: error5fb14c;
+            color: #5fb14c;
             text-decoration: none;
         }
 
@@ -237,17 +237,17 @@
         }
 
         .checkmark {
-            color: error5fb14c;
+            color: #5fb14c;
             margin-right: 8px;
         }
 
         .celebration {
-            color: errorf1ec33;
+            color: #f1ec33;
             margin: 0 4px;
         }
 
         .footer {
-            background-color: error353539;
+            background-color: #353539;
             margin-top: 80px;
             padding: 40px 0;
         }
@@ -266,7 +266,7 @@
         }
 
         .footer-section h3 {
-            color: errorf1ec33;
+            color: #f1ec33;
             font-size: 16px;
             font-weight: 500;
             margin-bottom: 16px;
@@ -281,18 +281,18 @@
         }
 
         .footer-links a {
-            color: errorffffff;
+            color: #ffffff;
             text-decoration: none;
             font-size: 14px;
             transition: color 0.2s;
         }
 
         .footer-links a:hover {
-            color: error5fb14c;
+            color: #5fb14c;
         }
 
         .footer-bottom {
-            border-top: 1px solid error4a7c59;
+            border-top: 1px solid #4a7c59;
             padding-top: 24px;
             display: flex;
             justify-content: space-between;
@@ -304,13 +304,13 @@
         .footer-logo {
             display: flex;
             align-items: center;
-            color: errorffffff;
+            color: #ffffff;
             font-size: 16px;
             font-weight: 500;
         }
 
         .footer-logo .logo-text {
-            color: errorf1ec33;
+            color: #f1ec33;
             margin-right: 4px;
         }
 
@@ -321,14 +321,14 @@
         }
 
         .footer-legal a {
-            color: errorffffff;
+            color: #ffffff;
             text-decoration: none;
             font-size: 12px;
             transition: color 0.2s;
         }
 
         .footer-legal a:hover {
-            color: error5fb14c;
+            color: #5fb14c;
         }
 
         @media (max-width: 768px) {
@@ -374,7 +374,7 @@
             }
 
             .sidebar-nav button {
-                border: 1px solid error5fb14c;
+                border: 1px solid #5fb14c;
                 border-radius: 20px;
                 padding: 8px 16px;
                 font-size: 14px;
@@ -383,8 +383,8 @@
 
             .sidebar-nav button.active {
                 background-color: transparent;
-                color: error5fb14c;
-                border-color: error5fb14c;
+                color: #5fb14c;
+                border-color: #5fb14c;
             }
 
             .section-title {
@@ -399,7 +399,7 @@
 
             .faq-question:hover {
                 background-color: transparent;
-                color: error006936;
+                color: #006936;
             }
 
             .faq-answer.show {
@@ -644,7 +644,7 @@
                 </div>
                 <div class="footer-legal">
                     <a href="/pages/ToS">Privacy Policy</a>
-                    <a href="/pages/ToS">Terms of Service</a>
+                    <a href="/pages/ToS.html">Terms of Service</a>
                     <a href="/pages/about">About</a>
                 </div>
             </div>
