--- a/pages/error.html
+++ b/pages/error.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404. That's an error.</title>
-    <link rel="icon" type="image/x-icon" href="src/godc.png">
+    <link rel="icon" type="image/x-icon" href="pages/godc.png">
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -174,8 +174,8 @@
         <div class="content">
             <div class="logo">
                 <div style="display: flex; align-items: center; gap: 16px; margin-bottom: 16px;">
-                    <img src="src/godc.png" alt="Access Point Logo 1" style="height: 80px;">
-                    <img src="src/helpdesk.png" alt="Access Point Logo 2" style="height: 80px;">
+                    <img src="pages/godc.png" alt="Access Point Logo 1" style="height: 80px;">
+                    <img src="pages/helpdesk.png" alt="Access Point Logo 2" style="height: 80px;">
                 </div>
                 <h1 class="logo-text" style="font-size: 2.5em; font-weight: 500; color: var(--green-dark); letter-spacing: -2px;">
                     Access Point
@@ -191,7 +191,7 @@
 
         <div class="illustration">
             <!-- Updated placeholder to match 612x408 dimensions -->
-            <img src="src/error.png" 
+            <img src="pages/error.png" 
                  alt="Robot illustration with scattered tools" 
                  class="robot-svg" />
         </div>
