--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="hidden md:flex space-x-6">
                         <a href="#" onclick="showPage('home')" class="nav-link text-primary-dark hover:text-green-medium transition-colors">Home</a>
                         </a>
-                        <a href="/error" class="text-primary-dark hover:text-green-medium transition-colors">About</a>
+                        <a href="/pages/about" class="text-primary-dark hover:text-green-medium transition-colors">About</a>
                         <a href="/inquire/inquire" class="text-primary-dark hover:text-green-medium transition-colors">Message</a>
                         <a href="/pages/help" class="text-primary-dark hover:text-green-medium transition-colors">Help Center</a>
                         <a href="/pages/faq" class="text-primary-dark hover:text-green-medium transition-colors">FAQs</a>
@@ -145,7 +145,7 @@
             <div id="mobileMenu" class="hidden md:hidden border-t border-gray-200 py-4">
                 <div class="flex flex-col space-y-3">
                     <a href="#" onclick="showPage('home')" class="text-primary-dark hover:text-green-medium transition-colors">Home</a>
-                      <a href="/error.html" class="text-primary-dark hover:text-green-medium transition-colors">About</a>
+                      <a href="/pages/about" class="text-primary-dark hover:text-green-medium transition-colors">About</a>
                         <a href="/inquire/inquire" class="text-primary-dark hover:text-green-medium transition-colors">Message</a>
                         <a href="/pages/help" class="text-primary-dark hover:text-green-medium transition-colors">Help Center</a>
                         <a href="/pages/faq" class="text-primary-dark hover:text-green-medium transition-colors">FAQs</a>
@@ -643,6 +643,7 @@
     </script>
 </body>
 </html>
+
 
 
 
