--- a/pages/about.html
+++ b/pages/about.html
@@ -563,7 +563,7 @@
             </nav>
         </div>
         <div class="header-right">
-            <a href="index" class="btn btn-primary">Get Started</a>
+            <a href="index.html" class="btn btn-primary">Get Started</a>
         </div>
     </header>
 
