--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Access Point - Student Help Desk</title>
+    <title>About Access Point</title>
     <link rel="icon" href="/src/helpdesk.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -563,7 +563,7 @@
             </nav>
         </div>
         <div class="header-right">
-            <a href="index.html" class="btn btn-primary">Get Started</a>
+            <a href="/index" class="btn btn-primary">Get Started</a>
         </div>
     </header>
 
