--- a/pages/help.html
+++ b/pages/help.html
@@ -300,56 +300,100 @@
             letter-spacing: -1px;
         }
 
-        /* Added footer with links and company info */
+        /* Updated footer styles to match new design */
         .footer {
             background-color: var(--primary-dark);
             color: white;
-            padding: 60px 24px 40px;
+            padding: 40px 24px 20px;
         }
 
-        .footer-content {
+        .footer-container {
             max-width: 1200px;
             margin: 0 auto;
         }
 
-        .footer-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 40px;
-            margin-bottom: 40px;
+        .footer-social {
+            margin-bottom: 30px;
+            text-align: center;
         }
 
-        .footer-section h3 {
+        .footer-social h3 {
             font-size: 18px;
             font-weight: 600;
             margin-bottom: 20px;
             color: var(--accent-yellow);
         }
 
-        .footer-links {
-            list-style: none;
+        .social-links {
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        .footer-links li {
-            margin-bottom: 12px;
-        }
-
-        .footer-links a {
+        .social-link {
+            display: flex;
+            align-items: center;
+            gap: 12px;
             color: #ccc;
             text-decoration: none;
+            font-size: 16px;
             transition: color 0.2s;
+            padding: 10px 15px;
+            border-radius: 8px;
+            transition: all 0.2s;
         }
 
-        .footer-links a:hover {
+        .social-link:hover {
             color: var(--green-light);
+            background-color: rgba(95, 177, 76, 0.1);
+        }
+
+        .social-icon {
+            width: 24px;
+            height: 24px;
+            fill: currentColor;
         }
 
         .footer-bottom {
             border-top: 1px solid #555;
             padding-top: 20px;
-            text-align: center;
-            color: #999;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
+        .footer-brand {
+            font-size: 16px;
+            font-weight: 600;
+            color: var(--accent-yellow);
+        }
+
+        .footer-nav {
+            display: flex;
+            gap: 30px;
+            align-items: center;
+        }
+
+        .footer-nav a {
+            color: #ccc;
+            text-decoration: none;
             font-size: 14px;
+            display: flex;
+            align-items: center;
+            gap: 6px;
+            transition: color 0.2s;
+        }
+
+        .footer-nav a:hover {
+            color: var(--green-light);
+        }
+
+        .help-icon {
+            width: 16px;
+            height: 16px;
+            fill: currentColor;
         }
 
         /* Added sidebar styles and functionality */
@@ -468,9 +512,20 @@
                 font-size: 36px;
             }
 
-            .footer-grid {
-                grid-template-columns: 1fr;
-                gap: 30px;
+            /* Updated footer responsive styles */
+            .footer-bottom {
+                flex-direction: column;
+                text-align: center;
+                gap: 15px;
+            }
+
+            .footer-nav {
+                flex-direction: column;
+                gap: 15px;
+            }
+
+            .social-links {
+                flex-direction: column;
             }
         }
     </style>
@@ -515,7 +570,7 @@
             
             <div class="search-container">
                 <svg class="search-icon" viewBox="0 0 24 24">
-                    <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
+                    <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5S13.09 5 9.5 5 3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
                 </svg>
                 <input type="text" class="search-box" id="searchInput" placeholder="Search your category...">
                 <div class="search-results" id="searchResults"></div>
@@ -605,58 +660,38 @@
     <section class="promo-section">
         <div class="promo-content">
             <h2 class="promo-heading">Mental health is not a destination, but a process.</h2>
-            <h3 class="promo-subheading">It’s about how you drive, not where you’re going</h3>
+            <h3 class="promo-subheading">It's about how you drive, not where you're going</h3>
             <div class="promo-logo">- Noam Shpancer</div>
         </div>
     </section>
 
-    <!-- Added comprehensive footer with links and company info -->
+    <!-- Replaced footer with new design featuring social media and cleaner layout -->
     <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-grid">
-                <div class="footer-section">
-                    <h3>Products</h3>
-                    <ul class="footer-links">
-                        <li><a href="#">Search</a></li>
-                        <li><a href="#">Gmail</a></li>
-                        <li><a href="#">Drive</a></li>
-                        <li><a href="#">Maps</a></li>
-                        <li><a href="#">YouTube</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Support</h3>
-                    <ul class="footer-links">
-                        <li><a href="#">Help Center</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Community</a></li>
-                        <li><a href="#">Report Issue</a></li>
-                        <li><a href="#">Feedback</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Company</h3>
-                    <ul class="footer-links">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">Press</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Developers</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Legal</h3>
-                    <ul class="footer-links">
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Service</a></li>
-                        <li><a href="#">Cookie Policy</a></li>
-                        <li><a href="#">Accessibility</a></li>
-                        <li><a href="#">Security</a></li>
-                    </ul>
+        <div class="footer-container">
+            <div class="footer-social">
+                <h3>Follow Us</h3>
+                <div class="social-links">
+                    <a href="https://www.facebook.com/ctudevcomofficial" class="social-link">
+                        <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                        </svg>
+                        Guild of Development Communicators
+                    </a>
                 </div>
             </div>
+
             <div class="footer-bottom">
-                <p>&copy;  2025 CTU-MC | BS-DEVCOM | ALL RIGHTS RESERVED. </p>
+                <div class="footer-brand">CTU-MC | BS-DEVCOM | ACCESS POINT</div>
+                <div class="footer-nav">
+                    <a href="/pages/ToS.html">Privacy and Terms</a>
+                    <a href="/error.html">About Access Point</a>
+                    <a href="/pages/help.html">
+                        <svg class="help-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"/>
+                        </svg>
+                        Help
+                    </a>
+                </div>
             </div>
         </div>
     </footer>
