--- a/pages/login.html
+++ b/pages/login.html
@@ -70,7 +70,7 @@
                 // Store login state and redirect back to main site
                 setTimeout(() => {
                     localStorage.setItem('userLoggedInFromLogin', 'true');
-                    window.location.href = 'index';
+                    window.location.href = '/index.html';
                 }, 2000);
                 
             } catch (error) {
