--- a/pages/login.html
+++ b/pages/login.html
@@ -70,7 +70,7 @@
                     // Store login state and redirect back to main site
                     setTimeout(() => {
                         localStorage.setItem('userLoggedInFromLogin', 'true');
-                        window.location.href = '/pages/main.html';
+                        window.location.href = '/pages/main';
                     }, 2000);
                     
                 } catch (error) {
