--- a/inquire/inquire.html
+++ b/inquire/inquire.html
@@ -877,8 +877,8 @@
                 <h1 class="brand-name">Access Point</h1>
             </a>
             <nav class="nav-links">
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="About Us.html" class="nav-link">About</a>
+                <a href="/index" class="nav-link">Home</a>
+                <a href="/pages/about" class="nav-link">About</a>
             </nav>
         </header>
         
