--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                         </a>
                         <a href="/pages/about" class="text-primary-dark hover:text-green-medium transition-colors">About</a>
                         <a href="/inquire/inquire" class="text-primary-dark hover:text-green-medium transition-colors">Message</a>
+                        <a href="/hall-of-notes/hall-of-notes" class="text-primary-dark hover:text-green-medium transition-colors">Notes</a>
                         <a href="/pages/help" class="text-primary-dark hover:text-green-medium transition-colors">Help Center</a>
                         <a href="/pages/faq" class="text-primary-dark hover:text-green-medium transition-colors">FAQs</a>
                         <a href="/freedom-wall/login" class="text-primary-dark hover:text-green-medium transition-colors">Commons</a>
@@ -147,6 +148,7 @@
                     <a href="#" onclick="showPage('home')" class="text-primary-dark hover:text-green-medium transition-colors">Home</a>
                       <a href="/pages/about" class="text-primary-dark hover:text-green-medium transition-colors">About</a>
                         <a href="/inquire/inquire" class="text-primary-dark hover:text-green-medium transition-colors">Message</a>
+                        <a href="/hall-of-notes/hall-of-notes" class="text-primary-dark hover:text-green-medium transition-colors">Notes</a>
                         <a href="/pages/help" class="text-primary-dark hover:text-green-medium transition-colors">Help Center</a>
                         <a href="/pages/faq" class="text-primary-dark hover:text-green-medium transition-colors">FAQs</a>
                         <a href="/freedom-wall/login" class="text-primary-dark hover:text-green-medium transition-colors">Commons</a>
@@ -643,6 +645,7 @@
     </script>
 </body>
 </html>
+
 
 
 
