--- a/hall-of-notes/hall-of-notes.html
+++ b/hall-of-notes/hall-of-notes.html
@@ -972,8 +972,7 @@
               <div id="dropdownName" class="dropdown-name"></div>
               <div id="dropdownEmail" class="dropdown-email"></div>
             </div>
-            <button class="dropdown-item">Account settings</button>
-            <button class="dropdown-item">Privacy</button>
+          <button class="dropdown-item" onclick="window.location.href='/pages/ToS.html'">Privacy and Terms</button>
             <button id="logoutBtn" class="dropdown-item">Sign out</button>
           </div>
         </div>
