--- a/index.html
+++ b/index.html
@@ -423,9 +423,9 @@
                     <div class="flex flex-wrap gap-6 text-sm text-gray-600">
                         <a href="/pages/ToS" class="hover:text-gray-800 transition-colors">Privacy and Terms</a>
                         <a href="/error" class="hover:text-gray-800 transition-colors">About Access Point</a>
-                        <a href="/pages/help" class="hover:text-gray-800 transition-colors flex items-center">
-                            <span class="material-icons text-sm mr-1">help</span>
-                            Help
+                        <a href="/contributors" class="hover:text-gray-800 transition-colors flex items-center">
+                            <span class="material-icons text-sm mr-1">diversity_2</span>
+                            Contributors
                         </a>
                     </div>
                 </div>
@@ -645,6 +645,7 @@
     </script>
 </body>
 </html>
+
 
 
 
