--- a/pages/help.html
+++ b/pages/help.html
@@ -581,73 +581,73 @@
         </div>
 
         <div class="products-grid" id="productsGrid">
-            <div class="product-card" data-keywords="therapy counseling mental health talk professional therapist psychologist" onclick="window.open('/help-center/therapy.html')">
+            <div class="product-card" data-keywords="therapy counseling mental health talk professional therapist psychologist" onclick="window.open('/help-center/therapy')">
                 <div class="product-icon">
                     <img src="/src/therapy.png" alt="Therapy">
                 </div>
                 <div class="product-name">Therapy and Counseling</div>
             </div>
-            <div class="product-card" data-keywords="medication management pills prescription drugs medicine doctor" onclick="window.open('/help-center/medication.html')">
+            <div class="product-card" data-keywords="medication management pills prescription drugs medicine doctor" onclick="window.open('/help-center/medication')">
                 <div class="product-icon">
                     <img src="/src/medication.png" alt="Medication">
                 </div>
                 <div class="product-name">Medication Management</div>
             </div>
-            <div class="product-card" data-keywords="exercise fitness workout gym physical activity sports running" onclick="window.open('/help-center/exercise.html')">
+            <div class="product-card" data-keywords="exercise fitness workout gym physical activity sports running" onclick="window.open('/help-center/exercise')">
                 <div class="product-icon">
                     <img src="/src/exercise.png" alt="Exercise">
                 </div>
                 <div class="product-name">Regular Exercise</div>
             </div>
-            <div class="product-card" data-keywords="mindfulness meditation relaxation breathing calm peace zen" onclick="window.open('/help-center/meditation.html')">
+            <div class="product-card" data-keywords="mindfulness meditation relaxation breathing calm peace zen" onclick="window.open('/help-center/meditation')">
                 <div class="product-icon">
                     <img src="/src/meditation.png" alt="Meditation">
                 </div>
                 <div class="product-name">Mindfulness and Meditation</div>
             </div>
-            <div class="product-card" data-keywords="sleep routine rest bedtime insomnia tired fatigue" onclick="window.open('/help-center/sleep.html')">
+            <div class="product-card" data-keywords="sleep routine rest bedtime insomnia tired fatigue" onclick="window.open('/help-center/sleep')">
                 <div class="product-icon">
                     <img src="/src/sleep.png" alt="Sleep">
                 </div>
                 <div class="product-name">Healthy Sleep Routine</div>
             </div>
-            <div class="product-card" data-keywords="nutrition diet food healthy eating balanced meals vitamins" onclick="window.open('/help-center/nutrition.html')">
+            <div class="product-card" data-keywords="nutrition diet food healthy eating balanced meals vitamins" onclick="window.open('/help-center/nutrition')">
                 <div class="product-icon">
                     <img src="/src/nutrition.png" alt="Nutrition">
                 </div>
                 <div class="product-name">Balanced Nutrition</div>
             </div>
-            <div class="product-card" data-keywords="social support friends family community connection relationships" onclick="window.open('/help-center/social.html')">
+            <div class="product-card" data-keywords="social support friends family community connection relationships" onclick="window.open('/help-center/social')">
                 <div class="product-icon">
                     <img src="/src/social.png" alt="Social Support">
                 </div>
                 <div class="product-name">Social Support</div>
             </div>
-            <div class="product-card" data-keywords="stress management anxiety worry pressure coping techniques" onclick="window.open('/help-center/stress.html')">
+            <div class="product-card" data-keywords="stress management anxiety worry pressure coping techniques" onclick="window.open('/help-center/stress')">
                 <div class="product-icon">
                     <img src="/src/stress.png" alt="Stress Management">
                 </div>
                 <div class="product-name">Stress Management Techniques</div>
             </div>
-            <div class="product-card" data-keywords="alcohol substance use addiction recovery sobriety limit drinking" onclick="window.open('/help-center/alcohol.html')">
+            <div class="product-card" data-keywords="alcohol substance use addiction recovery sobriety limit drinking" onclick="window.open('/help-center/alcohol')">
                 <div class="product-icon">
                     <img src="/src/alcohol.png" alt="Substance Awareness">
                 </div>
                 <div class="product-name">Limiting Alcohol and Substance Use</div>
             </div>
-            <div class="product-card" data-keywords="boundaries setting limits personal space self care protection" onclick="window.open('/help-center/boundaries.html')">
+            <div class="product-card" data-keywords="boundaries setting limits personal space self care protection" onclick="window.open('/help-center/boundaries')">
                 <div class="product-icon">
                     <img src="/src/setting.png" alt="Boundaries">
                 </div>
                 <div class="product-name">Setting Boundaries</div>
             </div>
-            <div class="product-card" data-keywords="crisis support emergency help hotline professional urgent immediate" onclick="window.open('/help-center/support.html')">
+            <div class="product-card" data-keywords="crisis support emergency help hotline professional urgent immediate" onclick="window.open('/help-center/support')">
                 <div class="product-icon">
                     <img src="/src/support.png" alt="Crisis Support">
                 </div>
                 <div class="product-name">Professional Crisis Support</div>
             </div>
-            <div class="product-card" data-keywords="routine schedule structure daily habits consistency organization" onclick="window.open('/help-center/routine.html')">
+            <div class="product-card" data-keywords="routine schedule structure daily habits consistency organization" onclick="window.open('/help-center/routine')">
                 <div class="product-icon">
                     <img src="/src/routine.png" alt="Routine">
                 </div>
@@ -829,3 +829,4 @@
     </script>
 </body>
 </html>
+
