--- a/help-center/alcohol.html
+++ b/help-center/alcohol.html
@@ -1089,7 +1089,7 @@
             </div>
 
             <div class="footer-bottom">
-                <div class="footer-brand">Managing Substance Use for Student Success</div>
+                <div class="footer-brand">Access Point</div>
                 <div class="footer-nav">
                     <a href="/privacy">Privacy and Terms</a>
                     <a href="/about">About Us</a>
