--- a/help-center/boundaries.html
+++ b/help-center/boundaries.html
@@ -1091,7 +1091,7 @@
             </div>
 
             <div class="footer-bottom">
-                <div class="footer-brand">Mastering Boundaries for Student Success</div>
+                <div class="footer-brand">Access Point</div>
                 <div class="footer-nav">
                     <a href="/privacy">Privacy and Terms</a>
                     <a href="/about">About Us</a>
@@ -1150,3 +1150,4 @@
     </script>
 </body>
 </html>
+
