--- a/freedom-wall/login.html
+++ b/freedom-wall/login.html
@@ -674,11 +674,11 @@
             <h2 class="modal-title">Terms of Service</h2>
             
             <div class="tos-content">
-                <p>Welcome to Access Point Commons! By using our platform, you agree to the following terms and conditions:</p>
+                <p>Welcome to Ang Silakbo Forums! By using our platform, you agree to the following terms and conditions:</p>
                 <h3>1. Acceptance of Terms</h3>
-                <p>By accessing or using Access Point Commons, you agree to be bound by these Terms of Service and all applicable laws and regulations.</p>
+                <p>By accessing or using Ang Silakbo Forums, you agree to be bound by these Terms of Service and all applicable laws and regulations.</p>
                 <h3>2. User Conduct</h3>
-                <p>You agree to use Access Point Commons in a manner consistent with all applicable laws and regulations. You are responsible for all activity that occurs under your account.</p>
+                <p>You agree to use Ang Silakbo Forums in a manner consistent with all applicable laws and regulations. You are responsible for all activity that occurs under your account.</p>
                 <h3>3. Privacy</h3>
                 <p>Your privacy is important to us. Our Privacy Policy explains how we collect, use, and protect your information.</p>
                 <h3>4. Content Guidelines</h3>
@@ -696,7 +696,7 @@
     
     <footer class="footer">
         <div class="footer-links">
-            <a href="About Us" class="footer-link">About</a>
+            <a href="/pages/about" class="footer-link">About</a>
             <a href="/pages/ToS" class="footer-link">Terms of Service</a>
             <a href="/pages/ToS" class="footer-link">Privacy Policy</a>
             <a href="https://www.facebook.com/ctudevcomofficial" target="_blank" class="footer-link">Facebook</a>
